fix education section alignment with small screen

--- a/styles/blog_post1.scss
+++ b/styles/blog_post1.scss
@@ -15,7 +15,7 @@
     justify-content: center;
    }
    .blog-header-img{
-       width: 60%;
+       width: 40%;
        margin: auto;
    }
   
