--- a/styles/index.scss
+++ b/styles/index.scss
@@ -37,6 +37,7 @@ header{
 
   display:flex;
   justify-content: center;
+  //flex-wrap: wrap;
   height: auto;
   width: 90%;
   margin: auto;
@@ -116,6 +117,9 @@ header{
         ul {
           padding: 0;
            margin: 0;
+           p{
+             font-size: 1rem;
+           }
         }
       }
       .education-section{
@@ -131,6 +135,7 @@ header{
           padding: 0;
            margin: 0;
            
+           
           li {
             background: url('../images/mortarboard.png') no-repeat left 9px;
             background-repeat: no-repeat;
@@ -138,6 +143,10 @@ header{
 	          background-size: 40px;
             margin: 0;
 	          padding: 0 0 0 45px;
+            p{
+              font-size: 1rem;
+              
+            }
           .institution{
             font-size: .75rem;
             color: rgba(0,0,0,.6);
@@ -456,6 +465,15 @@ header{
 {
 .main-nav{
   height:15vh;
+}
+.landing-container{
+   flex-wrap: wrap;
+}
+.education-intrests{
+  //flex-direction: column;
+  align-items: flex-start;
+  
+  
 }
   
 }
